--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background: url(../img/fundo.jpg);
+    background: url(../img/xenogears-background1.jpg);
     background-position: center center;
     background-size: cover cover;
     padding: 0;
@@ -30,7 +30,7 @@ main {
 }
 
 .robotron {
-    background: url(../img/estrutura.png) no-repeat;
+    /* background: url(../img/estrutura.png) no-repeat; */
     background-position: center center;
     margin: 0;
     flex-basis: 40%;
@@ -51,7 +51,7 @@ main {
     font-size: 130px;
     position: absolute;
     bottom: 7rem;
-    left: -3rem;
+    left: -10rem;
     line-height: 0.8;
     writing-mode: vertical-rl;
     text-orientation: mixed;
